--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Ronald's website</title>
+    <title>Intake</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="banner">
+        <div class="navbar">
+            <img src="images/logo.png" class="logo">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Manufacturers</a></li>
+            <li><a href="#">Stats</a></li>
+            <li><a href="#">History</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        </div>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+        <div class="content">
+            <h1>WELCOME TO INTAKE</h1>
+            <p>Find out all you want to know about cars</p>
+            <div class="container">
+                <form action="" class="search-bar">
+                    <input type="text" placeholder="search facts about cars" name="q">
+                    <button type="submit"><div></div><img src="images/search.png"></button>
+                </form>
+            </div>
+    </div>
 
-</body>
+    </body>
 </html>
