--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="/images/logo.png" class="logo">
+            <img src="./images/logo.png" class="logo">
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Manufacturers</a></li>
@@ -22,7 +22,7 @@
             <div class="container">
                 <form action="" class="search-bar">
                     <input type="text" placeholder="search facts about cars" name="q">
-                    <button type="submit"><div></div><img src="/images/search.png"></button>
+                    <button type="submit"><div></div><img src="./images/search.png"></button>
                 </form>
             </div>
     </div>
