--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="images/logo.PNG" class="logo">
+            <img src="images/logo.png" class="logo">
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Manufacturers</a></li>
@@ -16,15 +16,17 @@
             <li><a href="#">Contact</a></li>
         </ul>
         </div>
+
         <div class="content">
             <h1>WELCOME TO INTAKE</h1>
             <p>Find out all you want to know about cars</p>
             <div class="container">
                 <form action="" class="search-bar">
                     <input type="text" placeholder="search facts about cars" name="q">
-                    <button type="submit"><div></div><img src="images/search.PNG"></button>
+                    <button type="submit"><div></div><img src="images/search.png"></button>
                 </form>
             </div>
     </div>
+
     </body>
 </html>
